--- a/public/partials/itemview.html
+++ b/public/partials/itemview.html
@@ -1,6 +1,9 @@
 <div class='showHeader'><a href='#/{{show.id}}'><img src='/img/{{show.id}}.jpg'><h4>{{show.name}}</h4>
 <p>{{show.desc}}</p></a></div>
 <ol class='list'>
+	<li class='item'>
+		<h4>{{episode.name}}</h4>
+	</li>
 	<li ng-repeat='link in episode.links' class='item'>
 		<div ng-if='link.links.length > 1' class='item'>
 			<h4>{{link.name}}</h4>
