--- a/partials/itemlist.html
+++ b/partials/itemlist.html
@@ -1,7 +1,7 @@
-<div class='showHeader'><img src='/img/{{show.id}}.jpg'><h4>{{show.name}}</h4>
+<div class='showHeader'><img ng-src='/img/{{show.id}}.jpg'><h4>{{show.name}}</h4>
 <p>{{show.desc}}</p></div>
 <ol class='list'>
 	<li ng-repeat='item in show.list | orderBy:"date":true' class='item'>
-		<a href='#/{{show.id}}/{{item.id}}'><h4>{{item.name}}</h4><span class='date'>{{item.date | date : 'MM.dd.yy'}}</span></a>
+		<a ng-href='#/{{show.id}}/{{item.id}}' ng-click='go("left")'><h4>{{item.name}}</h4><span class='date'>{{item.date | date : 'MM.dd.yy'}}</span></a>
 	</li>
 </ol>
