removed animation changes

--- a/css/app.css
+++ b/css/app.css
@@ -40,23 +40,14 @@ a{
   bottom: initial;
 }
 
-#view-animate-container .left.view-animate.ng-enter, #view-animate-container .view-animate.ng-enter{
+#view-animate-container .view-animate.ng-enter {
   left:100%;
 }
-#view-animate-container .left.view-animate.ng-enter.ng-enter-active, #view-animate-container .view-animate.ng-enter.ng-enter-active{
+#view-animate-container .view-animate.ng-enter.ng-enter-active {
   left:0;
 }
-#view-animate-container .left.view-animate.ng-leave.ng-leave-active, #view-animate-container .view-animate.ng-leave.ng-leave-active{
+#view-animate-container .view-animate.ng-leave.ng-leave-active {
   left:-100%;
-}
-#view-animate-container .right.view-animate.ng-enter {
-  right:100%;
-}
-#view-animate-container .right.view-animate.ng-enter.ng-enter-active {
-  right:0;
-}
-#view-animate-container .right.view-animate.ng-leave.ng-leave-active {
-  right:-100%;
 }
 .title{
   border-bottom: 3px solid #ee4443;
