--- a/partials/itemview.html
+++ b/partials/itemview.html
@@ -1,4 +1,4 @@
-<div class='showHeader'><a ng-href='#/{{show.id}}' ng-click='go("left")'><img ng-src='/img/{{show.id}}.jpg'><h4>{{show.name}}</h4>
+<div class='showHeader'><a ng-href='#/{{show.id}}'><img ng-src='/img/{{show.id}}.jpg'><h4>{{show.name}}</h4>
 <p>{{show.desc}}</p></a></div>
 <ol class='list'>
 	<li class='item'>
