--- a/partials/showlist.html
+++ b/partials/showlist.html
@@ -1,5 +1,5 @@
 <ol class='show list'>
 	<li ng-repeat='show in shows' class='item'>
-		<a ng-href='#/{{show.id}}' ng-click='go("right")'><img ng-src='/img/{{show.id}}.jpg'><h4>{{show.name}}</h4></a>
+		<a ng-href='#/{{show.id}}'><img ng-src='/img/{{show.id}}.jpg'><h4>{{show.name}}</h4></a>
 	</li>
 </ol>
