--- a/css/app.css
+++ b/css/app.css
@@ -21,17 +21,16 @@ a{
   overflow:hidden;
 }
 
-#view-animate-container .view-animate {
+.view-animate {
   padding:0;
 }
 
-#view-animate-container .view-animate.ng-enter, .view-animate.ng-leave > *{
+.view-animate.ng-enter, .view-animate.ng-leave{
   -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) .5s;
   transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) .5s;
 
   display:block;
   width:100%;
-  border-left:1px solid black;
 
   position:absolute;
   top:84px;
@@ -40,13 +39,13 @@ a{
   bottom: initial;
 }
 
-#view-animate-container .view-animate.ng-enter {
+.view-animate.ng-enter {
   left:100%;
 }
-#view-animate-container .view-animate.ng-enter.ng-enter-active {
+.view-animate.ng-enter.ng-enter-active {
   left:0;
 }
-#view-animate-container .view-animate.ng-leave.ng-leave-active {
+.view-animate.ng-leave.ng-leave-active {
   left:-100%;
 }
 .title{
