--- a/partials/itemview.html
+++ b/partials/itemview.html
@@ -6,7 +6,7 @@
 	</li>
 	<li ng-repeat='link in episode.links' class='item'>
 		<div ng-if='link.links.length > 1' class='item'>
-			<ol class='list'><li class='item'><h4>{{link.name}}</h4></li><li ng-repeat='a in link.links track by $index' class='item'><a ng-href='{{a.link}}'><h4>{{$index+1}}</h4></a></li></ol>
+			<ol class='list'><li class='item'><h4>{{link.name}}</h4></li><li ng-repeat='a in link.links track by $index' class='item'><a ng-href='{{a}}'><h4>{{$index+1}}</h4></a></li></ol>
 		</div>
 		<div ng-if='link.links.length == 1' class='item'>
 			<a ng-href='{{link.links[0]}}'><h4>{{link.name}}</h4></a>
