--- a/css/app.css
+++ b/css/app.css
@@ -14,12 +14,9 @@ body{
 a{
   text-decoration: none;
 }
-.view-animate-container {
+#view-animate-container {
   position:relative;
-  background:white;
-  border:1px solid black;
-  height:40px;
-  overflow:hidden;
+  margin-top:84px;
 }
 
 .view-animate {
@@ -41,6 +38,8 @@ a{
 }
 
 .view-animate.ng-enter {
+  top: 84px;
+  position: fixed;
   left:100%;
 }
 .view-animate.ng-enter.ng-enter-active {
@@ -124,7 +123,10 @@ a{
 
 .title{
   display: inline-block;
-  width: 100%;
+  position: fixed;
+  top:0;
+  left:0;
+  right: 0;
   color: white;
   height: 81px;
   font-weight: normal;
