--- a/css/app.css
+++ b/css/app.css
@@ -39,13 +39,13 @@ a{
 .view-animate.ng-enter {
   top: 84px;
   position: fixed;
-  translate3d(100%, 0, 0)
+  left:100%;
 }
 .view-animate.ng-enter.ng-enter-active {
-  translate3d(0, 0, 0)
+  left:0;
 }
 .view-animate.ng-leave.ng-leave-active {
-  translate3d(-100%, 0, 0)
+  left:-100%;
 }
 .title{
   border-bottom: 3px solid #ee4443;
