--- a/partials/itemlist.html
+++ b/partials/itemlist.html
@@ -1,7 +1,10 @@
 <div class='showHeader'><img ng-src='/img/{{show.id}}.jpg'><h4>{{show.name}}</h4>
 <p>{{show.desc}}</p></div>
 <ol class='list'>
-	<li ng-repeat='item in show.list | orderBy:"date":true' class='item'>
+	<li ng-repeat='item in show.list | orderBy:date:true | filter:searchString' class='item'>
 		<a ng-href='#/{{show.id}}/{{item.id}}'><h4>{{item.name}}</h4><span class='date'>{{item.date | date : 'MM.dd.yy'}}</span></a>
+	</li>
+	<li class='item search'>
+		<input type='text' placeholder='Search' ng-model='searchString'>
 	</li>
 </ol>
