--- a/css/app.css
+++ b/css/app.css
@@ -167,7 +167,7 @@ a:visited, a:hover{
   height: 75px;
 }
 
-.list.search{
+.item.search{
   position: fixed;
   left: 0;
   right: 0;
@@ -175,7 +175,7 @@ a:visited, a:hover{
   bottom:0;
 }
 
-.list.search input{
+.item.search input{
   border:; 10px solid #222;
   font-size: 16px;
   font-family: PressStartKRegular;
