--- a/partials/itemlist.html
+++ b/partials/itemlist.html
@@ -4,7 +4,7 @@
 	<li class='item search'>
 		<input type='text' placeholder='Search' ng-model='searchString.name'>
 	</li>
-	<li ng-repeat='item in show.list | orderBy:"date":true | filter:searchString | limitTo: limit' class='item'>
+	<li ng-repeat='item in show.list | orderBy:"date":true | filter:searchString' class='item'>
 		<a href='#/{{show.id}}/{{item.id}}'><h4>{{item.name}}</h4><span class='date'>{{item.date | date : 'MM.dd.yy'}}</span></a>
 	</li>
 </ol>
