--- a/partials/itemlist.html
+++ b/partials/itemlist.html
@@ -1,6 +1,6 @@
 <div class='showHeader'><img ng-src='/img/{{show.id}}.jpg'><h4>{{show.name}}</h4>
 <p>{{show.desc}}</p></div>
-<ol class='list'>
+<ol scroll class='list'>
 	<li class='item search'>
 		<input type='text' placeholder='Search' ng-model='searchString.name'>
 	</li>
